--- a/animals_template.html
+++ b/animals_template.html
@@ -54,6 +54,8 @@
           font-weight: 300;
           letter-spacing: 2px;
           text-transform: uppercase;
+          text-align: center;
+          margin: 1rem;
         }
 
         .card__text {
