add list styling

--- a/animals_template.html
+++ b/animals_template.html
@@ -1,13 +1,14 @@
 <html>
     <head>
+        <meta charset="utf-8" />
         <style>
-        @gray-darker:               #444444;
-        @gray-dark:                 #696969;
-        @gray:                      #999999;
-        @gray-light:                #cccccc;
-        @gray-lighter:              #ececec;
-        @gray-lightest:             lighten(@gray-lighter,4%);
-
+        :root{
+            --gray-darker: #444444;
+            --gray-dark:   #696969;
+            --gray:        #999999;
+            --gray-light:  #cccccc;
+            --gray-lighter:#ececec;
+        }
 
         html {
           background-color: #ffe9e9;
@@ -49,7 +50,7 @@
         }
 
         .card__title {
-          color: @gray-dark;
+          color: var(--gray-dark);
           font-size: 1.25rem;
           font-weight: 300;
           letter-spacing: 2px;
@@ -63,6 +64,30 @@
           font-size: 0.95rem;
           line-height: 2;
           margin-bottom: 1.25rem;
+        }
+
+        .animal-info {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .animal-info__item {
+            background-color: var(--gray-lighter);
+            border-radius: 6px;
+            padding: 0.4rem 0.6rem;
+            margin: 0.3rem 0;
+            line-height: 1.6;
+        }
+
+        .animal-info__item strong {
+            color: var(--gray-darker);
+            font-weight: 500;
+            margin-right: 0.3rem;
+        }
+
+        .animal-info__item:hover {
+            background-color: var(--gray-light);
         }
         </style>
     </head>
