--- a/animals.html
+++ b/animals.html
@@ -1,13 +1,14 @@
 <html>
     <head>
+        <meta charset="utf-8" />
         <style>
-        @gray-darker:               #444444;
-        @gray-dark:                 #696969;
-        @gray:                      #999999;
-        @gray-light:                #cccccc;
-        @gray-lighter:              #ececec;
-        @gray-lightest:             lighten(@gray-lighter,4%);
-
+        :root{
+            --gray-darker: #444444;
+            --gray-dark:   #696969;
+            --gray:        #999999;
+            --gray-light:  #cccccc;
+            --gray-lighter:#ececec;
+        }
 
         html {
           background-color: #ffe9e9;
@@ -49,11 +50,13 @@
         }
 
         .card__title {
-          color: @gray-dark;
+          color: var(--gray-dark);
           font-size: 1.25rem;
           font-weight: 300;
           letter-spacing: 2px;
           text-transform: uppercase;
+          text-align: center;
+          margin: 1rem;
         }
 
         .card__text {
@@ -62,60 +65,247 @@
           line-height: 2;
           margin-bottom: 1.25rem;
         }
+
+        .animal-info {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .animal-info__item {
+            background-color: var(--gray-lighter);
+            border-radius: 6px;
+            padding: 0.4rem 0.6rem;
+            margin: 0.3rem 0;
+            line-height: 1.6;
+        }
+
+        .animal-info__item strong {
+            color: var(--gray-darker);
+            font-weight: 500;
+            margin-right: 0.3rem;
+        }
+
+        .animal-info__item:hover {
+            background-color: var(--gray-light);
+        }
         </style>
     </head>
     <body>
         <h1>My Animal Repository</h1>
         <ul class="cards">
-            <li class="cards__item"><div class="card__title">American Foxhound</div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> North-America<br/>
-<strong>Type:</strong> Hound<br/>
-</p></li><li class="cards__item"><div class="card__title">Arctic Fox</div><p class="card__text"><strong>Diet:</strong> Carnivore<br/>
-<strong>Location:</strong> Eurasia<br/>
-<strong>Type:</strong> Mammal<br/>
-</p></li><li class="cards__item"><div class="card__title">Cross Fox</div><p class="card__text"><strong>Diet:</strong> Carnivore<br/>
-<strong>Location:</strong> North-America<br/>
-<strong>Type:</strong> mammal<br/>
-</p></li><li class="cards__item"><div class="card__title">Darwin’s fox</div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> South-America<br/>
-<strong>Type:</strong> Mammal<br/>
-</p></li><li class="cards__item"><div class="card__title">English Foxhound</div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Europe<br/>
-</p></li><li class="cards__item"><div class="card__title">Fennec Fox</div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Africa<br/>
-</p></li><li class="cards__item"><div class="card__title">Fox</div><p class="card__text"><strong>Diet:</strong> Carnivore<br/>
-<strong>Location:</strong> Africa<br/>
-<strong>Type:</strong> Mammal<br/>
-</p></li><li class="cards__item"><div class="card__title">Fox Snakes</div><p class="card__text"><strong>Diet:</strong> Carnivore<br/>
-<strong>Location:</strong> North-America<br/>
-</p></li><li class="cards__item"><div class="card__title">Fox Squirrel</div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Central-America<br/>
-<strong>Type:</strong> rodent<br/>
-</p></li><li class="cards__item"><div class="card__title">Fox Terrier</div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Europe<br/>
-</p></li><li class="cards__item"><div class="card__title">Golden-Crowned Flying Fox</div><p class="card__text"><strong>Diet:</strong> Herbivore<br/>
-<strong>Location:</strong> Asia<br/>
-</p></li><li class="cards__item"><div class="card__title">Gray Fox</div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Central-America<br/>
-<strong>Type:</strong> Mammal<br/>
-</p></li><li class="cards__item"><div class="card__title">Kit Fox</div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Central-America<br/>
-<strong>Type:</strong> mammal<br/>
-</p></li><li class="cards__item"><div class="card__title">Marble Fox</div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> North-America<br/>
-<strong>Type:</strong> Mammal<br/>
-</p></li><li class="cards__item"><div class="card__title">Red Fox</div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Africa<br/>
-</p></li><li class="cards__item"><div class="card__title">Smooth Fox Terrier</div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Europe<br/>
-</p></li><li class="cards__item"><div class="card__title">Tibetan Fox</div><p class="card__text"><strong>Diet:</strong> Carnivore<br/>
-<strong>Location:</strong> Asia<br/>
-<strong>Type:</strong> Mammal<br/>
-</p></li><li class="cards__item"><div class="card__title">Toy Fox Terrier</div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> North-America<br/>
-</p></li><li class="cards__item"><div class="card__title">Wire Fox Terrier</div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
-<strong>Location:</strong> Europe<br/>
-</p></li>
+            <li class="cards__item">
+  <div class="card__title"><strong>American Foxhound</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
+      <li class="animal-info__item"><strong>Location:</strong> North-America</li>
+      <li class="animal-info__item"><strong>Type:</strong> Hound</li>
+      <li class="animal-info__item"><strong>Distinctive feature:</strong> Long legs and wide, flat ears</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Arctic Fox</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Carnivore</li>
+      <li class="animal-info__item"><strong>Main prey:</strong> Lemmings, voles, hares, other small rodents, berries, insects</li>
+      <li class="animal-info__item"><strong>Location:</strong> Eurasia</li>
+      <li class="animal-info__item"><strong>Habitat:</strong> Polar forest regions</li>
+      <li class="animal-info__item"><strong>Type:</strong> Mammal</li>
+      <li class="animal-info__item"><strong>Distinctive feature:</strong> Thick fur that changes colour with season</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Cross Fox</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Carnivore</li>
+      <li class="animal-info__item"><strong>Location:</strong> North-America</li>
+      <li class="animal-info__item"><strong>Habitat:</strong> Forests, prairies, deserts, mountains, cities, suburbs, tundra, scrub, near rivers, farms</li>
+      <li class="animal-info__item"><strong>Type:</strong> mammal</li>
+      <li class="animal-info__item"><strong>Distinctive feature:</strong> The cross on its back.</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Darwin’s fox</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
+      <li class="animal-info__item"><strong>Location:</strong> South-America</li>
+      <li class="animal-info__item"><strong>Habitat:</strong> Temperate rainforests, shrubland</li>
+      <li class="animal-info__item"><strong>Type:</strong> Mammal</li>
+      <li class="animal-info__item"><strong>Distinctive feature:</strong> Its small size</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>English Foxhound</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
+      <li class="animal-info__item"><strong>Location:</strong> Europe</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Fennec Fox</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
+      <li class="animal-info__item"><strong>Location:</strong> Africa</li>
+      <li class="animal-info__item"><strong>Habitat:</strong> Sandy and semi-arid desert</li>
+      <li class="animal-info__item"><strong>Distinctive feature:</strong> Large, over-sized ears</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Fox</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Carnivore</li>
+      <li class="animal-info__item"><strong>Main prey:</strong> Rabbits, Birds, Lizards</li>
+      <li class="animal-info__item"><strong>Location:</strong> Africa</li>
+      <li class="animal-info__item"><strong>Habitat:</strong> Woodland areas and urban parks</li>
+      <li class="animal-info__item"><strong>Type:</strong> Mammal</li>
+      <li class="animal-info__item"><strong>Distinctive feature:</strong> Pointed ears and long bushy tail</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Fox Snakes</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Carnivore</li>
+      <li class="animal-info__item"><strong>Main prey:</strong> Mice and birds</li>
+      <li class="animal-info__item"><strong>Location:</strong> North-America</li>
+      <li class="animal-info__item"><strong>Distinctive feature:</strong> Strongly patterned alternating blotches down the length of their spine.</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Fox Squirrel</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
+      <li class="animal-info__item"><strong>Location:</strong> Central-America</li>
+      <li class="animal-info__item"><strong>Habitat:</strong> Leaf nests and tree dens</li>
+      <li class="animal-info__item"><strong>Type:</strong> rodent</li>
+      <li class="animal-info__item"><strong>Distinctive feature:</strong> Large size and large, bushy tail</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Fox Terrier</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
+      <li class="animal-info__item"><strong>Location:</strong> Europe</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Golden-Crowned Flying Fox</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Herbivore</li>
+      <li class="animal-info__item"><strong>Location:</strong> Asia</li>
+      <li class="animal-info__item"><strong>Habitat:</strong> Caves and forests</li>
+      <li class="animal-info__item"><strong>Distinctive feature:</strong> Soft golden cap</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Gray Fox</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
+      <li class="animal-info__item"><strong>Location:</strong> Central-America</li>
+      <li class="animal-info__item"><strong>Habitat:</strong> Forests and plains</li>
+      <li class="animal-info__item"><strong>Type:</strong> Mammal</li>
+      <li class="animal-info__item"><strong>Distinctive feature:</strong> The silver gray coat of fur</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Kit Fox</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
+      <li class="animal-info__item"><strong>Location:</strong> Central-America</li>
+      <li class="animal-info__item"><strong>Habitat:</strong> desert, grasslands</li>
+      <li class="animal-info__item"><strong>Type:</strong> mammal</li>
+      <li class="animal-info__item"><strong>Distinctive feature:</strong> tiny bodies and enormous ears</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Marble Fox</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
+      <li class="animal-info__item"><strong>Location:</strong> North-America</li>
+      <li class="animal-info__item"><strong>Habitat:</strong> Human captivity</li>
+      <li class="animal-info__item"><strong>Type:</strong> Mammal</li>
+      <li class="animal-info__item"><strong>Distinctive feature:</strong> The marble-colored coat</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Red Fox</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
+      <li class="animal-info__item"><strong>Location:</strong> Africa</li>
+      <li class="animal-info__item"><strong>Habitat:</strong> Forests, grasslands, tundra, prairie, deserts, and mountains</li>
+      <li class="animal-info__item"><strong>Distinctive feature:</strong> The bushy tail</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Smooth Fox Terrier</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
+      <li class="animal-info__item"><strong>Location:</strong> Europe</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Tibetan Fox</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Carnivore</li>
+      <li class="animal-info__item"><strong>Main prey:</strong> pikas, marmots, rodents, lizards, and other small prey</li>
+      <li class="animal-info__item"><strong>Location:</strong> Asia</li>
+      <li class="animal-info__item"><strong>Habitat:</strong> Tibetan Plateau</li>
+      <li class="animal-info__item"><strong>Type:</strong> Mammal</li>
+      <li class="animal-info__item"><strong>Distinctive feature:</strong> Square-shaped skull</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Toy Fox Terrier</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
+      <li class="animal-info__item"><strong>Location:</strong> North-America</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class="card__title"><strong>Wire Fox Terrier</strong></div>
+  <div class="card__text">
+    <ul class="animal-info">
+      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
+      <li class="animal-info__item"><strong>Location:</strong> Europe</li>
+    </ul>
+  </div>
+</li>
+
         </ul>
     </body>
 </html>
