--- a/animals.html
+++ b/animals.html
@@ -1,111 +1,127 @@
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <style>
-        :root{
-            --gray-darker: #444444;
-            --gray-dark:   #696969;
-            --gray:        #999999;
-            --gray-light:  #cccccc;
-            --gray-lighter:#ececec;
-        }
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>My Animal Repository</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+      :root {
+        --gray-darker: #444444;
+        --gray-dark: #696969;
+        --gray: #999999;
+        --gray-light: #cccccc;
+        --gray-lighter: #ececec;
+      }
 
-        html {
-          background-color: #ffe9e9;
-        }
+      /* sane defaults */
+      *, *::before, *::after { box-sizing: border-box; }
 
-        h1 {
-            text-align: center;
-            font-size: 40pt;
-            font-weight: normal;
-        }
+      html { background-color: #ffe9e9; }
 
-        body {
-          font-family: 'Roboto','Helvetica Neue', Helvetica, Arial, sans-serif;
-          font-style: normal;
-          font-weight: 400;
-          letter-spacing: 0;
-          padding: 1rem;
-          text-rendering: optimizeLegibility;
-          -webkit-font-smoothing: antialiased;
-          -moz-osx-font-smoothing: grayscale;
-          -moz-font-feature-settings: "liga" on;
-          width: 900px;
-          margin: auto;
-        }
+      body {
+        font-family: 'Roboto','Helvetica Neue', Helvetica, Arial, sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        letter-spacing: 0;
+        line-height: 1.5;
+        padding: 1rem;
+        text-rendering: optimizeLegibility;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        max-width: 900px;
+        width: 100%;
+        margin: 0 auto;
+      }
 
-        .cards {
-          list-style: none;
-          margin: 0;
-          padding: 0;
-        }
+      h1 {
+        text-align: center;
+        font-size: 2.5rem;
+        font-weight: normal;
+      }
 
-        .cards__item {
-          background-color: white;
-          border-radius: 0.25rem;
-          box-shadow: 0 20px 40px -14px rgba(0,0,0,0.25);
-          overflow: hidden;
-          padding: 1rem;
-          margin: 50px;
-        }
+      h2.subheading {
+        text-align: center;
+        font-size: 1.3rem;
+        font-weight: 500;
+        color: var(--gray-darker);
+        margin-top: -0.3rem;
+        margin-bottom: 1.5rem;
+        letter-spacing: 0.5px;
+      }
 
-        .card__title {
-          color: var(--gray-dark);
-          font-size: 1.25rem;
-          font-weight: 300;
-          letter-spacing: 2px;
-          text-transform: uppercase;
-          text-align: center;
-          margin: 1rem;
-        }
+      .cards {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+      }
 
-        .card__text {
-          flex: 1 1 auto;
-          font-size: 0.95rem;
-          line-height: 2;
-          margin-bottom: 1.25rem;
-        }
+      .cards__item {
+        background-color: #fff;
+        border-radius: 0.25rem;
+        box-shadow: 0 20px 40px -14px rgba(0,0,0,0.25);
+        overflow: hidden;
+        padding: 1rem;
+        margin: 2rem 0;
+        transition: transform 0.2s ease, box-shadow 0.2s ease; /* smooth both ways */
+        will-change: transform, box-shadow;
+      }
 
-        .animal-info {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
+      .cards__item:hover {
+        transform: translateY(-4px);
+        box-shadow: 0 25px 45px -15px rgba(0,0,0,0.3);
+      }
 
-        .animal-info__item {
-            background-color: var(--gray-lighter);
-            border-radius: 6px;
-            padding: 0.4rem 0.6rem;
-            margin: 0.3rem 0;
-            line-height: 1.6;
-        }
+      .card__title {
+        color: var(--gray-dark);
+        font-size: 1.25rem;
+        font-weight: 300;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        text-align: center;
+        margin: 1rem;
+      }
 
-        .animal-info__item strong {
-            color: var(--gray-darker);
-            font-weight: 500;
-            margin-right: 0.3rem;
-        }
+      .card__text {
+        font-size: 0.95rem;
+        line-height: 2;
+        margin-bottom: 1.25rem;
+      }
 
-        .animal-info__item:hover {
-            background-color: var(--gray-light);
-        }
-        </style>
-    </head>
-    <body>
-        <h1>My Animal Repository</h1>
-        <ul class="cards">
-            <li class="cards__item">
-  <div class="card__title"><strong>American Foxhound</strong></div>
-  <div class="card__text">
-    <ul class="animal-info">
-      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
-      <li class="animal-info__item"><strong>Location:</strong> North-America</li>
-      <li class="animal-info__item"><strong>Type:</strong> Hound</li>
-      <li class="animal-info__item"><strong>Distinctive feature:</strong> Long legs and wide, flat ears</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
+      .animal-info {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
+
+      .animal-info__item {
+        background-color: var(--gray-lighter);
+        border-radius: 6px;
+        padding: 0.4rem 0.6rem;
+        margin: 0.3rem 0;
+        line-height: 1.6;
+      }
+
+      .animal-info__item strong {
+        color: var(--gray-darker);
+        font-weight: 500;
+        margin-right: 0.3rem;
+      }
+
+      .animal-info__item:hover {
+        background-color: var(--gray-light);
+      }
+
+      /* respectful motion */
+      @media (prefers-reduced-motion: reduce) {
+        .cards__item { transition: none; transform: none; }
+      }
+    </style>
+  </head>
+  <body>
+    <h1>My Animal Repository</h1>
+<h2 class='subheading'>Skin type: Fur (10 animals)</h2>
+    <ul class="cards">
+      <li class="cards__item">
   <div class="card__title"><strong>Arctic Fox</strong></div>
   <div class="card__text">
     <ul class="animal-info">
@@ -143,15 +159,6 @@
   </div>
 </li>
 <li class="cards__item">
-  <div class="card__title"><strong>English Foxhound</strong></div>
-  <div class="card__text">
-    <ul class="animal-info">
-      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
-      <li class="animal-info__item"><strong>Location:</strong> Europe</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
   <div class="card__title"><strong>Fennec Fox</strong></div>
   <div class="card__text">
     <ul class="animal-info">
@@ -176,17 +183,6 @@
   </div>
 </li>
 <li class="cards__item">
-  <div class="card__title"><strong>Fox Snakes</strong></div>
-  <div class="card__text">
-    <ul class="animal-info">
-      <li class="animal-info__item"><strong>Diet:</strong> Carnivore</li>
-      <li class="animal-info__item"><strong>Main prey:</strong> Mice and birds</li>
-      <li class="animal-info__item"><strong>Location:</strong> North-America</li>
-      <li class="animal-info__item"><strong>Distinctive feature:</strong> Strongly patterned alternating blotches down the length of their spine.</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
   <div class="card__title"><strong>Fox Squirrel</strong></div>
   <div class="card__text">
     <ul class="animal-info">
@@ -195,26 +191,6 @@
       <li class="animal-info__item"><strong>Habitat:</strong> Leaf nests and tree dens</li>
       <li class="animal-info__item"><strong>Type:</strong> rodent</li>
       <li class="animal-info__item"><strong>Distinctive feature:</strong> Large size and large, bushy tail</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class="card__title"><strong>Fox Terrier</strong></div>
-  <div class="card__text">
-    <ul class="animal-info">
-      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
-      <li class="animal-info__item"><strong>Location:</strong> Europe</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class="card__title"><strong>Golden-Crowned Flying Fox</strong></div>
-  <div class="card__text">
-    <ul class="animal-info">
-      <li class="animal-info__item"><strong>Diet:</strong> Herbivore</li>
-      <li class="animal-info__item"><strong>Location:</strong> Asia</li>
-      <li class="animal-info__item"><strong>Habitat:</strong> Caves and forests</li>
-      <li class="animal-info__item"><strong>Distinctive feature:</strong> Soft golden cap</li>
     </ul>
   </div>
 </li>
@@ -255,26 +231,6 @@
   </div>
 </li>
 <li class="cards__item">
-  <div class="card__title"><strong>Red Fox</strong></div>
-  <div class="card__text">
-    <ul class="animal-info">
-      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
-      <li class="animal-info__item"><strong>Location:</strong> Africa</li>
-      <li class="animal-info__item"><strong>Habitat:</strong> Forests, grasslands, tundra, prairie, deserts, and mountains</li>
-      <li class="animal-info__item"><strong>Distinctive feature:</strong> The bushy tail</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class="card__title"><strong>Smooth Fox Terrier</strong></div>
-  <div class="card__text">
-    <ul class="animal-info">
-      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
-      <li class="animal-info__item"><strong>Location:</strong> Europe</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
   <div class="card__title"><strong>Tibetan Fox</strong></div>
   <div class="card__text">
     <ul class="animal-info">
@@ -287,25 +243,7 @@
     </ul>
   </div>
 </li>
-<li class="cards__item">
-  <div class="card__title"><strong>Toy Fox Terrier</strong></div>
-  <div class="card__text">
-    <ul class="animal-info">
-      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
-      <li class="animal-info__item"><strong>Location:</strong> North-America</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class="card__title"><strong>Wire Fox Terrier</strong></div>
-  <div class="card__text">
-    <ul class="animal-info">
-      <li class="animal-info__item"><strong>Diet:</strong> Omnivore</li>
-      <li class="animal-info__item"><strong>Location:</strong> Europe</li>
-    </ul>
-  </div>
-</li>
 
-        </ul>
-    </body>
+    </ul>
+  </body>
 </html>
